- fix alignment of the x-button

--- a/packages/ui/src/5-elements/form/_x-button.scss
+++ b/packages/ui/src/5-elements/form/_x-button.scss
@@ -14,5 +14,5 @@
   border-radius: var(--border-radius-circular);
 
   display:inline-grid; place-content:center; line-height:1;
-  [class*="icon"]::before { vertical-align:middle; }
+  [class*="icon"]::before { vertical-align:pxToRem(-3); }
 }
